@@ -1,6 +1,8 @@
 firefox-trunk (15.0~a1~hg20120603r95688-0ubuntu2) UNRELEASED; urgency=low
 
   * Update globalmenu-extension to 3.2.4 prerelease r342
+
+  [ Chris Coulson <chris.coulson@canonical.com> ]
   * Merge get-orig-source.mk in to mozbuild.mk
     - update debian/build/mozbuild.mk
     - remove debian/build/get-orig-source.mk
@@ -72,6 +74,10 @@ firefox-trunk (15.0~a1~hg20120603r95688-0ubuntu2) UNRELEASED; urgency=low
     defaults)
     - update debian/firefox.install.in
     - update debian/firefox.links.in
+
+  [ Martin Pitt <martin.pitt@ubuntu.com> ]
+  * Add partial support for Python 3 in the apport hook
+    - update debian/apport/source_firefox.py.in
 
  -- Chris Coulson <chris.coulson@canonical.com>  Thu, 07 Jun 2012 23:00:12 +0100
 
